--- a/single_project.html
+++ b/single_project.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Heaven x</title>
-    <link rel="icon" href="img/favicon.png">
+    <title>elmasaa</title>
+    <link rel="icon" href="img/logo.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- animate CSS -->
@@ -35,9 +35,6 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <div class="main_menu_iner">
-                        <div class="search_icon">
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
-                        </div>
                         <div class="logo">
                             <a href="index.html"><img src="img/logo.png" alt="#"></a>
                         </div>
@@ -57,9 +54,6 @@
                                         <li><a href="about.html">about</a></li>
                                         <li><a href="service.html">service</a></li>
                                         <li><a href="project.html">project</a></li>
-                                        <li><a href="blog.html">blog</a></li>
-                                        <li><a href="single-blog.html">single blog</a></li>
-                                        <li><a href="elements.html">elements</a></li>
                                         <li><a href="contact.html">contact</a></li>
                                     </ul>
                                 </div>
@@ -69,17 +63,9 @@
                 </div>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
-        </div>
     </header>
     <!-- Header part end-->
+
 
     <!-- breadcrumb start-->
     <section class="breadcrumb breadcrumb_bg">
@@ -136,8 +122,6 @@
                         <p><i class="ti-user"></i>Starts on:: <span>20 May 2018</span> </p>
                         <p><i class="ti-user"></i>Ends on: <span>30 May 2019</span> </p>
                         <p><i class="ti-user"></i>Location: <span>New York</span> </p>
-                        <p><i class="ti-user"></i>Architect: <span>Jhon Piter</span> </p>
-                        <p><i class="ti-user"></i>View project: <span>www.colorlib.com</span> </p>
                     </div>
                 </div>
             </div>
@@ -245,6 +229,7 @@
     </section>
     <!-- map us part end-->
 
+
     <!-- footer part start-->
     <footer class="footer-area">
         <div class="container">
@@ -266,11 +251,11 @@
                     <div class="single-footer-widget footer_2">
                         <h4>Projects</h4>
                         <ul>
-                            <li><a href="#">WHMCS-bridge</a></li>
-                            <li><a href="#"> Search Domain</a></li>
-                            <li><a href="#">My Account</a></li>
-                            <li><a href="#"> Shopping Cart</a></li>
-                            <li><a href="#">Our Shop</a></li>
+                            <li><a href="#">project_1</a></li>
+                            <li><a href="#"> project_1</a></li>
+                            <li><a href="#"> project_2</a></li>
+                            <li><a href="#"> project_2</a></li>
+                            <li><a href="#"> project_2</a></li>
                         </ul>
                     </div>
                 </div>
@@ -281,31 +266,7 @@
                             <p><span>Address :</span> Hath of it fly signs
                                 bear be one blessed after </p>
                             <p><span>Phone :</span> +2 36 265 (8060) </p>
-                            <p><span>Email :</span> info@colorlib.com </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6">
-                    <div class="single-footer-widget footer_3">
-                        <h4>Newsletter</h4>
-                        <p>Heaven fruitful doesn't over lesser in days. Appear creeping seas</p>
-                        <div class="form-wrap" id="mc_embed_signup">
-                            <form target="_blank"
-                                action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                                method="get" class="form-inline">
-                                <input class="form-control" name="EMAIL" placeholder="Your Email Address"
-                                    onfocus="this.placeholder = ''" onblur="this.placeholder = 'Your Email Address '"
-                                    required="" type="email">
-                                <button class="btn btn-default text-uppercase"><i
-                                        class="far fa-paper-plane"></i></button>
-                                <div style="position: absolute; left: -5000px;">
-                                    <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value=""
-                                        type="text">
-                                </div>
-
-                                <div class="info"></div>
-                            </form>
+                            <p><span>Email :</span> info@elmasa.com </p>
                         </div>
                     </div>
                 </div>
@@ -315,16 +276,18 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <p class="footer-text m-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+                        <p class="footer-text m-0">
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
+                            by <a href="https://api.whatsapp.com/send?phone=0201152306375" target="_blank">Amer
+                                Mostafa</a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
     <!-- footer part end-->
-
     <!-- jquery plugins here-->
     <!-- jquery -->
     <script src="js/jquery-1.12.1.min.js"></script>
