--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="#" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="#" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="#" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="about_img">
-                        <img src="img/about_overlay.png" alt="#">
+                        <img src="img/about-us.jpg" alt="#">
                     </div>
                 </div>
             </div>
