--- a/about.html
+++ b/about.html
@@ -123,42 +123,42 @@
                 <div class="col-lg-12">
                     <div class="single_page_special_item owl-carousel">
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
                             </div>
                         </div>
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
                             </div>
                         </div>
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
                             </div>
                         </div>
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
                             </div>
                         </div>
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
                             </div>
                         </div>
                         <div class="single_slide_item">
-                            <img src="img/icon/helmet.png" alt="">
+                            <img src="https://via.placeholder.com/70x70" alt="">
                             <div class="single_special_text">
                                 <h3>Inovative</h3>
                                 <p>Living Over He god living Creature that appear place</p>
