--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img
+                                            src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -90,7 +91,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img
+                                            src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -101,7 +103,8 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua.</p>
                             <div class="banner_btn">
-                                <a href="single_project.html" class="btn_1">learn more <span><img src="img/icon/left.svg" alt=""></span>
+                                <a href="single_project.html" class="btn_1">learn more <span><img
+                                            src="img/icon/left.svg" alt=""></span>
                                 </a>
                             </div>
                         </div>
@@ -120,21 +123,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="single_special_part border_left">
-                        <img src="img/icon/helmet.png" alt="">
+                        <img src="https://via.placeholder.com/70x70" alt="">
                         <div class="single_special_text">
                             <h3>Inovative</h3>
                             <p>Living Over He god living Creature that appear place</p>
                         </div>
                     </div>
                     <div class="single_special_part border_left">
-                        <img src="img/icon/helmet.png" alt="">
+                        <img src="https://via.placeholder.com/70x70" alt="">
                         <div class="single_special_text">
                             <h3>Inovative</h3>
                             <p>Living Over He god living Creature that appear place</p>
                         </div>
                     </div>
                     <div class="single_special_part border_left">
-                        <img src="img/icon/helmet.png" alt="">
+                        <img src="https://via.placeholder.com/70x70" alt="">
                         <div class="single_special_text">
                             <h3>Inovative</h3>
                             <p>Living Over He god living Creature that appear place</p>
@@ -162,7 +165,7 @@
                 </div>
                 <div class="col-lg-7 col-md-6">
                     <div class="about_img">
-                        <img src="img/about-us.jpg" alt="#">
+                        <img src="https://via.placeholder.com/745x475" alt="#">
                     </div>
                 </div>
             </div>
@@ -187,7 +190,7 @@
                         <div class="single_service_slide">
                             <div class="row justify-content-end align-items-center single_service">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/service_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                 </div>
                                 <div class="col-lg-5 col-md-6">
                                     <div class="service_text">
@@ -202,7 +205,7 @@
                         <div class="single_service_slide">
                             <div class="row justify-content-end align-items-center single_service">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/service_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                 </div>
                                 <div class="col-lg-5 col-md-6">
                                     <div class="service_text">
@@ -237,7 +240,7 @@
                         <div class="single_project_slide">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -246,7 +249,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -259,7 +262,7 @@
                         <div class="single_project_slide">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -268,7 +271,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
                                         <a href="single_project.html" class="btn_1">learn more <span><img
