--- a/project.html
+++ b/project.html
@@ -98,7 +98,7 @@
                         <div class="single_project_slide">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/70x70" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -107,7 +107,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/70x70" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -120,7 +120,7 @@
                         <div class="single_project_slide">
                             <div class="row">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
 
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/project/project_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                     <div class="single_project_text">
                                         <p>Lorem ipsum dolor sit amet lorem consectetur adipiscing look. </p>
                                         <a href="single_project.html" class="btn_1">learn more <span><img
