--- a/service.html
+++ b/service.html
@@ -97,7 +97,7 @@
                         <div class="single_service_slide">
                             <div class="row justify-content-end align-items-center single_service">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/service_2.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                 </div>
                                 <div class="col-lg-5 col-md-6">
                                     <div class="service_text">
@@ -112,7 +112,7 @@
                         <div class="single_service_slide">
                             <div class="row justify-content-end align-items-center single_service">
                                 <div class="col-lg-6 col-md-6">
-                                    <img src="img/service_1.png" alt="#">
+                                    <img src="https://via.placeholder.com/270x315" alt="#">
                                 </div>
                                 <div class="col-lg-5 col-md-6">
                                     <div class="service_text">
