--- a/single_project.html
+++ b/single_project.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="project_details_img">
-                        <img src="img/project_details.png" alt="#">
+                        <img src="https://via.placeholder.com/1200x500" alt="#">
                     </div>
                 </div>
                 <div class="col-lg-8">
@@ -138,37 +138,37 @@
                     <div class="grid gallery">
                         <div class="grid-sizer"></div>
                         <div class="grid-item big_weight">
-                            <a href="img/gallery/gallery_1.png" class="">
+                            <a href="https://via.placeholder.com/700x600" class="">
                                 <div class="project_img">
-                                    <img src="img/gallery/gallery_1.png" alt="">
+                                    <img src="https://via.placeholder.com/700x600" alt="">
                                 </div>
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="img/gallery/gallery_2.png" class="">
+                            <a href="https://via.placeholder.com/500x400" class="">
                                 <div class="project_img">
-                                    <img src="img/gallery/gallery_2.png" alt="">
+                                    <img src="https://via.placeholder.com/500x400" alt="">
                                 </div>
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="img/gallery/gallery_3.png" class="">
+                            <a href="https://via.placeholder.com/500x400" class="">
                                 <div class="project_img">
-                                    <img src="img/gallery/gallery_3.png" alt="">
+                                    <img src="https://via.placeholder.com/500x400" alt="">
                                 </div>
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="img/gallery/gallery_4.png" class="">
+                            <a href="https://via.placeholder.com/500x400" class="">
                                 <div class="project_img">
-                                    <img src="img/gallery/gallery_4.png" alt="">
+                                    <img src="https://via.placeholder.com/500x400" alt="">
                                 </div>
                             </a>
                         </div>
                         <div class="grid-item">
-                            <a href="img/gallery/gallery_5.png" class="">
+                            <a href="https://via.placeholder.com/500x500" class="">
                                 <div class="project_img">
-                                    <img src="img/gallery/gallery_5.png" alt="">
+                                    <img src="https://via.placeholder.com/500x400" alt="">
                                 </div>
                             </a>
                         </div>
