--- a/index.html
+++ b/index.html
@@ -384,8 +384,7 @@
                         <p class="footer-text m-0">
                             Copyright &copy;
                             <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
-                            by <a href="https://api.whatsapp.com/send?phone=0201152306375" target="_blank">Amer
-                                Mostafa</a>
+                            by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">motto studio</a>
                         </p>
                     </div>
                 </div>
