--- a/service.html
+++ b/service.html
@@ -132,7 +132,7 @@
     <!-- service part end-->
 
     <!-- contact us part start-->
-    <section class="contact_us">
+    <!-- <section class="contact_us">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -163,7 +163,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- contact us part end-->
 
     <!-- map us part start-->
@@ -179,63 +179,38 @@
         </div>
     </section>
     <!-- map us part end-->
-<!-- footer part start-->
-<footer class="footer-area">
-    <div class="container">
-        <div class="row justify-content-between">
-            <div class="col-lg-3 col-sm-6">
-                <div class="single-footer-widget footer_1">
-                    <h4>About Us</h4>
-                    <p>Heaven fruitful doesn't over for these theheaven fruitful doe over days appear
-                        creeping seasons sad behold beari ath of it fly signs bearing be one blessed after.</p>
-                    <div class="social_icon">
-                        <a href="#"><i class="ti-facebook"></i></a>
-                        <a href="#"><i class="ti-twitter-alt"></i></a>
-                        <a href="#"><i class="ti-dribbble"></i></a>
-                        <a href="#"><i class="ti-instagram"></i></a>
+
+    <!-- footer part start-->
+    <footer class="footer">
+        <div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-3">
+                        <form action="#" class="subscribe mb-4 mb-lg-0">
+                            <a href="#" class="m-0 p-0"><img src="img/logo.png" alt="Elamsa-consult"></a>
+                        </form>
                     </div>
-                </div>
-            </div>
-            <div class="col-lg-2 col-sm-6">
-                <div class="single-footer-widget footer_2">
-                    <h4>Projects</h4>
-                    <ul>
-                        <li><a href="#">project_1</a></li>
-                        <li><a href="#"> project_1</a></li>
-                        <li><a href="#"> project_2</a></li>
-                        <li><a href="#"> project_2</a></li>
-                        <li><a href="#"> project_2</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="single-footer-widget footer_2">
-                    <h4>Contact us</h4>
-                    <div class="contact_info">
-                        <p><span>Address :</span> Hath of it fly signs
-                            bear be one blessed after </p>
-                        <p><span>Phone :</span> +2 36 265 (8060) </p>
-                        <p><span>Email :</span> info@elmasa.com </p>
+                    <div class="col-lg-6 text-lg-center">
+                        <p class="footer-text m-0">
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
+                            by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">Motto
+                                Studio</a>
+                        </p>
+                    </div>
+                    <div class="col-lg-3">
+                        <ul class="list-unstyled nav-links social nav-right text-lg-right">
+                            <li><a href="#"><span class="ti-twitter"></span></a></li>
+                            <li><a href="#"><span class="ti-instagram"></span></a></li>
+                            <li><a href="#"><span class="ti-facebook"></span></a></li>
+                            <li><a href="#"><span class="ti-pinterest"></span></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="copyright_part">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p class="footer-text m-0">
-                        Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
-                        by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">motto studio</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- footer part end-->
+    </footer>
+    <!-- footer part end-->
 
     <!-- jquery plugins here-->
     <!-- jquery -->
