--- a/index.html
+++ b/index.html
@@ -339,19 +339,28 @@
     <footer class="footer">
         <div>
             <div class="container">
-                <div class="row align-items-center">
+                <div class="row align-items-center" style="padding-top: 50px;">
+                    <div class="col-lg-6">
+                        <p class="footer-text m-0">
+                            <span class="ti-location-pin"></span>
+                            598 Virginia Street, Apartment 2
+                            River Grove IL 60171
+                        </p>
+                        <p class="footer-text m-0">
+                            <span class="ti-location-pin"></span>
+                            598 Virginia Street, Apartment 2
+                            River Grove IL 60171
+                        </p>
+                        <p class="footer-text m-0">
+                            <span class="ti-location-pin"></span>
+                            598 Virginia Street, Apartment 2
+                            River Grove IL 60171
+                        </p>
+                    </div>
                     <div class="col-lg-3">
                         <form action="#" class="subscribe mb-4 mb-lg-0">
                             <a href="#" class="m-0 p-0"><img src="img/logo.png" alt="Elamsa-consult"></a>
                         </form>
-                    </div>
-                    <div class="col-lg-6 text-lg-center">
-                        <p class="footer-text m-0">
-                            Copyright &copy;
-                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
-                            by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">Motto
-                                Studio</a>
-                        </p>
                     </div>
                     <div class="col-lg-3">
                         <ul class="list-unstyled nav-links social nav-right text-lg-right">
@@ -360,6 +369,14 @@
                             <li><a href="#"><span class="ti-facebook"></span></a></li>
                             <li><a href="#"><span class="ti-pinterest"></span></a></li>
                         </ul>
+                    </div>
+                    <div class="col-lg-12 text-lg-center" style="border-top: 2px solid #fff; margin-top: 10px;">
+                        <p class="footer-text m-0">
+                            Copyright &copy;
+                            <script>document.write(new Date().getFullYear());</script> All rights reserved | Developed
+                            by <a href="https://api.whatsapp.com/send?phone=0201124560051" target="_blank">Motto
+                                Studio</a>
+                        </p>
                     </div>
                 </div>
             </div>
